--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
+<body>
    <header>
     <div class="logo">
       <img src="images/JC.png">
@@ -32,13 +32,55 @@
         <div class="intro"> 
           <p style="text-align:right">A designer who creates to elevate content. Jacqueline is not afraid of color and bold choices, with a mix of clean and structured design.</p>
     <div class="button">
-      <button> Download Resume > </button>
+      <button> About Me > </button>
       </div>
     </div>
   </div>
-   </section>
-<div class="footer-content">
-  <div class="footer">
+  </section>
+  <section class="Work">
+    <h1 class="case-studies">Work: Case Studies</h1>
+    <div class="flexContainer">
+      <div class="Angel-Paws">
+        <h3>Angel Paws Website Redesign</h3>
+        <img class="Image2" src="images/AngelPawsPhone.png">
+        <p>This project was created with the hopes of helping this non-profit have more traction via their website. At first glance it was unclear what the mission statement or goal of this non-profit was. Through my teams research....</p>
+        <button> View Project > </button>
+      </div>
+      <div class="NSA">
+        <h3>National Security Agency Website Redesign</h3>
+        <img src="images/NSAphone.png">
+        <p>Summary
+  
+          Under Construction
+          Under Construction 
+          Under Construction 
+          Under Construction  
+        </p>
+        <button> View Project > </button>
+      </div>
+    </div>
+  </section>
+ <section class="Skills">
+  <div class="SkillsGrid">
+    <div class="about-section">
+      <h1>About</h1>
+        <p>I am a designer focused on UX/UI design. I recieved my BA in Design with an emphasis in Photography in the Spring of 2020. I love being creative, learning and  trying new things. I get so excited when I am able solve a creative or technical issue that left me stumped.  My favorite things in the world are being a silly aunt, wandering new cities and towns, and watching movies and tv. </p>
+        <button>Download Resume</button>
+    </div>
+        <div class="grad">
+          <img src="images/Graduation2020-47 copy 1.png"> 
+        </div>
+        <div class="SkillsSec">
+          <h4 class="">Skills</h4>
+          <p>Photography        Videography        Printmaking        2D Design    Wireframing        Prototyping        User Research        Problem Solving        Typography        Teaching        Managing        Leadership    Color Theory        Troubleshooting        HTML        CSS       Javascript       Adobe Programs        Figma        Miro        Communication        Presenting        Organizing     </p>
+          <h4>Contact</h4>
+          <p>EMAIL: jacqueiselaphoto@gmail.com
+           LinkedIn: https://www.linkedin.com/in/jacqueline-isela-camacho/</p>
+        </div>
+  </div>
+  </section>
+  <footer class="footer-content">
+    <div class="footer">
     <nav class="inline-block-2">
     <ul>
       <li class="inline-block-2">Contact</li>
@@ -48,11 +90,10 @@
     </ul>
     </nav>
     <div class="socials">
-      <img src="images/facebook.png">
       <img src="images/LinkedIn - Negative.png">
       <img src="images/insta.png">
     </div>
   </div>
-</div> 
-  </body>
-  </html>
+  </footer> 
+</body>
+</html>
